# mlb-the-show-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
notebooks/: classes.py  extract.ipynb  extract_spacy_nlp.ipynb  game_log.txt  game_log_weird_names.txt  transform.ipynb  transform_old.ipynb  utils.py
